# global_loop

./: README.md  vins.yaml
PCD/: ref16.pcd
camera_models/: CMakeLists.txt
camera_models/camera_calib_example/: readme.txt
camera_models/include/camodocal/calib/: CameraCalibration.h
camera_models/src/: intrinsic_calib.cc
camera_models/src/camera_models/: CataCamera.cc  EquidistantCamera.cc  PinholeCamera.cc  PinholeFullCamera.cc  ScaramuzzaCamera.cc
config/: icra_launch.launch  ref14_xunluo.launch  ref15_xunluo_farloop.launch  sjtu.launch  zju.launch
config/fastlab_dld_omni/: back.yaml  front.yaml  left.yaml  mapping.yaml  realsense_stereo_imu_config.yaml  reloc.yaml
config/fastlab_dld_rs/: mapping.yaml  realsense_stereo_imu_config.yaml  reloc.yaml  rs.yaml
config/fastlab_nx_rs/: realsense_stereo_imu_config.yaml  reloc.yaml  rs_left.yaml  rs_right.yaml
config/fastlab_zdf/: reloc.yaml  rs_left.yaml
config/workstation_dld_omni/: back.yaml  front.yaml  mapping.yaml  realsense_stereo_imu_config.yaml  reloc.yaml  right.yaml
config/workstation_dld_rs/: mapping.yaml  realsense_stereo_imu_config.yaml  reloc.yaml  rs_left.yaml  rs_right.yaml
config/workstation_nx_rs/: realsense_stereo_imu_config.yaml  reloc.yaml
config/workstation_zdf/: reloc.yaml
loop_fusion/: CMakeLists.txt  package.xml
loop_fusion/launch/: fl_dld_omni_mapping.launch  fl_dld_omni_reloc.launch  fl_dld_omni_reloc_far.launch  fl_dld_omni_vins.launch  fl_dld_rs_mapping.launch  fl_dld_rs_reloc.launch  fl_dld_rs_reloc_far.launch  fl_nx_rs_reloc.launch  fl_nx_rs_reloc_far.launch  fl_zdf_reloc_far.launch  mapping.rviz  mapping_rviz.launch  planner.rviz  planner_rviz.launch  reloc.rviz  reloc_rviz.launch  video.rviz  video_rviz.launch  ws_dld_omni_mapping.launch  ws_dld_omni_reloc.launch  ws_dld_omni_reloc_far.launch  ws_dld_rs_mapping.launch  ws_dld_rs_reloc.launch  ws_dld_rs_reloc_far.launch  ws_hku_cbd_vins.launch  ws_nx_rs_reloc.launch  ws_nx_rs_reloc_far.launch  ws_puyuan_mono_fusion.launch  ws_puyuan_mono_mapping.launch  ws_puyuan_mono_reloc.launch  ws_puyuan_mono_vins.launch  ws_zdf_reloc_far.launch
loop_fusion/src/: FSuperpoint.cpp  FSuperpoint.h  database.cpp  database.h  feature_detector.cpp  feature_detector.h  feature_manager.cpp  feature_manager.h  feature_tracker.cpp  feature_tracker.h  keyframe.cpp  keyframe.h  light_glue.cpp  light_glue.h  parameters.cpp  parameters.h  point_matcher.cpp  point_matcher.h  pose_graph.cpp  pose_graph.h  ros_mapping_node.cpp  ros_reloc_node.cpp  super_glue.cpp  super_glue.h  super_point.cpp  super_point.h  sys_configs.h  utils.h
loop_fusion/src/utility/: Grider_FAST.h  dls_impl.cc  dls_pnp.cc  dls_pnp.h  tic_toc.h
scripts/: draw_T_trans.py  draw_T_trans_KITTI.py  draw_T_trans_dld.py  draw_T_trans_nx.py  draw_T_trans_omni.py  draw_T_trans_zld.py  draw_cmp.py  eva_time_statistics.py  evaluate.py  evaluate_loopres.py  evaluate_loopres_PR.py  evaluate_loopres_aproj.py  evaluate_loopres_exp.py  evaluate_rotres.py  evaluate_smooth_traj.py  extract_img.py  extract_lioasgt.py  fy.xml  get_T_trans.py  my.bib  my.tex  record.sh  record_pureinput.sh  select_point.py  show_map.py  test_gftt.py  vinsT_2_msckfT.py
support_files/model/: superpoint_v1_sim_int32.engine  superpoint_v1_sim_int32_laptop.engine  superpoint_v1_sim_int32_nx.engine
video_making/scripts/: path_gen.py
vins_estimator/: CMakeLists.txt
vins_estimator/launch/: euroc.launch  euroc_front.launch  nx.rviz  nx_2.launch  nx_5.launch  simulation.launch  vins_rviz_config.rviz  vins_test_d430.launch  ws_dld_vins.launch  ws_weihao_vins.launch  ws_zld_vins.launch
vins_estimator/src/: rosNodeTest.cpp
vins_estimator/src/estimator/: estimator.cpp  feature_manager.cpp  parameters.cpp  parameters.h
vins_estimator/src/featureTracker/: feature_tracker.cpp  feature_tracker.h
vins_estimator/src/utility/: visualization.cpp
